--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         width: 100%;
         display: block;
         transform: translate3d(0px, 0px, 0px);
-        background-size: contain;
+        background-size: 100% 500px;
         background-image: url('http://static.tumblr.com/4fdbcf9ea9e87afb4c35641ba030b4f9/uv6gi4d/fq6nm3ueb/tumblr_static_ccaxhrft59ck0sgk88o8gw8ck_2048_v2.jpg');
         background-repeat: no-repeat;
       }
@@ -51,6 +51,10 @@
       .title:hover, .title:active {
         color: #ed0505;
         text-decoration: none;
+      }
+
+      .title-row h1 {
+        text-align: center;
       }
 
       .tumblr_posts {
