--- a/team-stream/index.html
+++ b/team-stream/index.html
@@ -48,7 +48,7 @@
           </div>
 
           <div class="row">
-            <iframe class="vid" src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" width="100%"></iframe>
+            <iframe class="vid" src="http://www.twitch.tv/Wolf_32_/embed" frameborder="0" scrolling="no" width="100%"></iframe>
           </div>
         </div>
 
@@ -58,7 +58,7 @@
 
         <div class="col-md-4">
           <div class="row">
-            <iframe class="vid" src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" width="100%"></iframe>
+            <iframe class="vid" src="http://www.twitch.tv/Wolf_32_/embed" frameborder="0" scrolling="no" width="100%"></iframe>
           </div>
 
           <div class="row">
