--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>CG TV</title>
+    <title>BulletPoint Gaming</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
@@ -101,7 +101,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">CG TV</a>
+          <a class="navbar-brand" href="#">BulletPoint Gaming</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -120,7 +120,7 @@
 
       <div class="row title-row">
         <div class="col-md-offset-1 col-md-10">
-          <h1><a class="title" href="/">The CG TV Game Review</a></h1>
+          <h1><a class="title" href="/">The BulletPoint Game Review</a></h1>
         </div>
       </div>
 
