--- a/team-stream/index.html
+++ b/team-stream/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>CG TV</title>
+    <title>BulletPoint Gaming</title>
 
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/styles.css" />
@@ -27,7 +27,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">CG TV</a>
+          <a class="navbar-brand" href="#">BulletPoint Gaming</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
