--- a/team-stream/index.html
+++ b/team-stream/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="../css/styles.css" />
 
     <style type="text/css">
+      body {
+        background-color: #000;
+      }
+
       .content {
         height: 100%;
         width: 100%;
