--- a/team-stream/index.html
+++ b/team-stream/index.html
@@ -62,7 +62,7 @@
           </div>
 
           <div class="row">
-            <iframe class="vid" src="http://www.twitch.tv/fookyu_2/embed" frameborder="0" scrolling="no" width="100%"></iframe>
+            <iframe class="vid" src="http://www.twitch.tv/polloman50/embed" frameborder="0" scrolling="no" width="100%"></iframe>
           </div>
         </div>
       </div>
