--- a/index.html
+++ b/index.html
@@ -13,80 +13,14 @@
     <style type="text/css">
       body {
         background-color: #000;
-        padding: 0;
-        margin-top: -50px;
+        overflow: hidden;
       }
 
-      .splash-row {
-        height: 400px;
-      }
-
-      .splash-row .header-image {
+      .blog-container {
+        width: 100%;
         height: 100%;
-        width: 100%;
-        display: block;
-        transform: translate3d(0px, 0px, 0px);
-        background-size: 100% 500px;
-        background-image: url('http://static.tumblr.com/4fdbcf9ea9e87afb4c35641ba030b4f9/uv6gi4d/fq6nm3ueb/tumblr_static_ccaxhrft59ck0sgk88o8gw8ck_2048_v2.jpg');
-        background-repeat: no-repeat;
-      }
-
-      .title-row {
-        margin-top: 0;
-        padding-top 0;
-        padding-bottom: 40px;
-      }
-
-      .title {
-        color: #ed0505;
-        font-family: '1785 GLC Baskerville', serif, "Helvetica Neue", HelveticaNeue, Arial, sans-serif;
-        font-weight: normal;
-        font-size: 52px;
-        line-height: 1.2;
-        word-wrap: break-word;
-        padding: 30px;
-        text-align: center;
-      }
-
-      .title:hover, .title:active {
-        color: #ed0505;
-        text-decoration: none;
-      }
-
-      .title-row h1 {
-        text-align: center;
-      }
-
-      .tumblr_posts {
-        list-style: none;
-        width: 100%;
-        padding: 0;
         margin: 0;
-      }
-
-      .tumblr_post {
-        font-size: 16px;
-        font-family: "Helvetica Neue",HelveticaNeue,Arial,sans-serif;
-        color: #666;
-        background-color: #fff;
-        line-height: 1.6;
-        margin-bottom: 40px;
-        border-bottom-right-radius: 5px;
-        border-bottom-left-radius: 5px;
-      }
-
-      .tumblr_video {
-        background-color: #333;
-      }
-
-      .tumblr_caption {
-        padding: 20px;
-      }
-
-      .tumblr_caption p:first {
-        font-size: 18px;
-        padding: 20px 0;
-        text-align: center;
+        padding: 0;
       }
     </style>
   </head>
@@ -112,46 +46,24 @@
       </div>
     </div>
 
-    <div class="container">
-
-      <div class="row splash-row">
-        <a href="/" class="header-image"></a>
-      </div>
-
-      <div class="row title-row">
-        <div class="col-md-offset-1 col-md-10">
-          <h1><a class="title" href="/">The BulletPoint Game Review</a></h1>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-offset-1 col-md-10">
-          <script type="text/javascript" src="http://cg-tv-review.tumblr.com/js"></script>
-        </div>
-      </div>
-
+    <div class="container blog-container">
+      <iframe src="http://blog.bulletpointgaming.com" width="100%" height="100%" frameborder="no"></iframe>
     </div><!-- /.container -->
 
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript">
       var timeout = null;
-      var resize_videos = function() {
-        var width = $('.tumblr_posts').width();
-        $('.tumblr_video').each(function(video_container) {
-          $video = $(this);
-          $video.find('iframe')
-            .height(394)
-            .width(width)
-            .attr('frameborder', 0)
-            .prop('allowfullscreen')
-        });
+      var resize_blog = function() {
+        var width = $(window).width();
+        var height = $(window).height() - 20;
+        $('iframe').width(width).height(height);
       };
       $(window).resize(function(event) {
         if (timeout) clearTimeout(timeout);
-        timeout = setTimeout(resize_videos, 500);
+        timeout = setTimeout(resize_blog, 500);
       })
-      $(function() { resize_videos(); })
+      $(function() { resize_blog(); })
     </script>
 
   </body>
