Adjusts the static media paths

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -7,8 +7,8 @@
 
     <title>BulletPoint Gaming</title>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
 
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
       <h1>Calender goes here</h1>
     </div><!-- /.container -->
 
-    <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../js/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="../js/bootstrap.min.js"></script>
   </body>
 </html>
