--- a/team-stream/index.html
+++ b/team-stream/index.html
@@ -48,7 +48,7 @@
           </div>
 
           <div class="row">
-            <iframe class="vid" src="http://www.twitch.tv/thescruffygamer/embed" frameborder="0" scrolling="no" width="100%"></iframe>
+            <iframe class="vid" src="http://www.twitch.tv/the_scruffy_gamer/embed" frameborder="0" scrolling="no" width="100%"></iframe>
           </div>
         </div>
 
@@ -62,7 +62,7 @@
           </div>
 
           <div class="row">
-            <iframe class="vid" src="http://www.twitch.tv/cgweed/embed" frameborder="0" scrolling="no" width="100%"></iframe>
+            <iframe class="vid" src="http://www.twitch.tv/ohheyimdevin/embed" frameborder="0" scrolling="no" width="100%"></iframe>
           </div>
         </div>
       </div>
