--- a/team-stream/index.html
+++ b/team-stream/index.html
@@ -33,6 +33,7 @@
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
             <li class="active"><a href="/team-stream">Team Stream</a></li>
+            <li><a href="/blog">Blog</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
