--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       .main-image {
         background-image: url(img/Fat_man_blank.jpg);
         background-size: 900px 600px;
+        color: #fff;
         height: 600px;
       }
       .main-image .heading {
