--- a/list/index.html
+++ b/list/index.html
@@ -9,11 +9,11 @@
 
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/fonts.css" />
+    <link rel="stylesheet" href="../css/3d-factory.css" />
 
     <style type="text/css">
-      body {
-        background-color: #000;
-      }
+      /* TODO */
     </style>
   </head>
   <body>
@@ -34,30 +34,22 @@
             <li><a href="/">Home</a></li>
             <li><a href="/team-stream">Team Stream</a></li>
             <li><a href="/blog">Blog</a></li>
-            <li><a href="/list">Mailing List</a></li>
-            <li class="active"><a href="/calendar">Calendar</a></li>
+            <li><a href="/calendar">Calendar</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
 
-    <div class="container calendar-container">
-      <h1>Calender goes here</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-md-offset-2">
+          <iframe src="https://docs.google.com/forms/d/180S_1RrSIg9NqNGVqXVWpGDQNTtE_byvrr2Lz23Z1GA/viewform?embedded=true" width="760" height="450" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        </div>
+      </div>
+
     </div><!-- /.container -->
 
-    <footer class="footer">
-      <div class="container">
-        <p>
-        <a href="//www.twitter.com/gameinsomniacs">Twitter</a>
-        <a href="//www.facebook.com/CG.TV.vid.gamers">Facebook</a>
-        <a href="//www.youtube.com/channel/UC3CnElhRhsV4O40hWNE-raQ">Twitch</a>
-        <a href="//www.twitch.tv/cgweed">Youtube</a>
-        <a href="/list">Mailing list</a>
-        <p>
-      </div>
-    </footer>
-
-    <script type="text/javascript" src="../js/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="../js/jquery-2.1.1.js"></script>
     <script type="text/javascript" src="../js/bootstrap.min.js"></script>
   </body>
 </html>
