--- a/team-stream/index.html
+++ b/team-stream/index.html
@@ -34,6 +34,8 @@
             <li><a href="/">Home</a></li>
             <li class="active"><a href="/team-stream">Team Stream</a></li>
             <li><a href="/blog">Blog</a></li>
+            <li><a href="/list">Mailing List</a></li>
+            <li><a href="/calendar">Calendar</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -70,7 +72,19 @@
 
     </div><!-- /.container -->
 
-    <script type="text/javascript" src="../js/jquery-1.11.1.min.js"></script>
+    <footer class="footer">
+      <div class="container">
+        <p>
+        <a href="//www.twitter.com/gameinsomniacs">Twitter</a>
+        <a href="//www.facebook.com/CG.TV.vid.gamers">Facebook</a>
+        <a href="//www.youtube.com/channel/UC3CnElhRhsV4O40hWNE-raQ">Twitch</a>
+        <a href="//www.twitch.tv/cgweed">Youtube</a>
+        <a href="/list">Mailing list</a>
+        <p>
+      </div>
+    </footer>
+
+    <script type="text/javascript" src="../js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="../js/bootstrap.min.js"></script>
     <script type="text/javascript">
       var timeout = null;
