Updates mailing list page.

--- a/list/index.html
+++ b/list/index.html
@@ -34,6 +34,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/team-stream">Team Stream</a></li>
             <li><a href="/blog">Blog</a></li>
+            <li class="active"><a href="/list">Mailing List</a></li>
             <li><a href="/calendar">Calendar</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -48,6 +49,18 @@
       </div>
 
     </div><!-- /.container -->
+
+    <footer class="footer">
+      <div class="container">
+        <p>
+        <a href="//www.twitter.com/gameinsomniacs">Twitter</a>
+        <a href="//www.facebook.com/CG.TV.vid.gamers">Facebook</a>
+        <a href="//www.youtube.com/channel/UC3CnElhRhsV4O40hWNE-raQ">Twitch</a>
+        <a href="//www.twitch.tv/cgweed">Youtube</a>
+        <a href="/list">Mailing list</a>
+        <p>
+      </div>
+    </footer>
 
     <script type="text/javascript" src="../js/jquery-2.1.1.js"></script>
     <script type="text/javascript" src="../js/bootstrap.min.js"></script>
